[#319] Implement REST APIs for counts summary
# New features and improvements

Implemented stats api see [wasp-openapi.yaml](documentation/wasp-openapi.yaml)

```
./waspctl-darwin-amd64  start-producer FakeDataProducer
./waspctl-darwin-amd64  start-pipegraph EventPipegraph
./waspctl-darwin-amd64  start-pipegraph TelemetryPipegraph
./waspctl-darwin-amd64  start-pipegraph LoggerPipegraph
./waspctl-darwin-amd64  start-producer LoggerProducer
./waspctl-darwin-amd64  stats "2020-05-15T10:47:09.492Z" "2020-05-15T11:00:09.492Z"
```

get telemetry series now supports aggregates

```
waspctl-darwin-amd64 get-telemetry-series  "java.lang.ps-scavenge.collection-time" "jvm" 100 "2020-05-18T12:00:52.236Z" "2020-05-18T15:10:52.236Z" sum
```

aggregates can be:

* `sum`
* `max`
* `min`
* `avg`

NOTE:

aggregate value for buckets without data will be `null`

```json
[{
    "timestamp": "2020-05-18T13:58:40.236Z",
    "value": null
},
{
    "timestamp": "2020-05-18T14:00:34.236Z",
    "value": 6286
},
{
    "timestamp": "2020-05-18T14:02:28.236Z",
    "value": null
}]
```

# Breaking changes

None

# Migration

None

# Bug fixes

Fixed metric name returned truncated by list-telemetry-metric operation

# Related issue

Closes #319
