# waspctl/wasp-openapi.go
@@ -1023,56 +1023,6 @@ func WaspOpenapiLogs(paramSearch string, paramStarttimestamp string, paramEndtim
 	return resp, decoded, nil
 }
 
-// WaspOpenapiUpdateMlmodel update-mlmodel
-func WaspOpenapiUpdateMlmodel(params *viper.Viper, body string) (*gentleman.Response, map[string]interface{}, error) {
-	handlerPath := "update-mlmodel"
-	if waspOpenapiSubcommand {
-		handlerPath = "wasp-openapi " + handlerPath
-	}
-
-	server := viper.GetString("server")
-	if server == "" {
-		server = waspOpenapiServers()[viper.GetInt("server-index")]["url"]
-	}
-
-	url := server + "/mlmodels"
-
-	req := cli.Client.Put().URL(url)
-
-	paramPretty := params.GetBool("pretty")
-	if paramPretty != false {
-		req = req.AddQuery("pretty", fmt.Sprintf("%v", paramPretty))
-	}
-
-	if body != "" {
-		req = req.AddHeader("Content-Type", "text/json").BodyString(body)
-	}
-
-	cli.HandleBefore(handlerPath, params, req)
-
-	resp, err := req.Do()
-	if err != nil {
-		return nil, nil, errors.Wrap(err, "Request failed")
-	}
-
-	var decoded map[string]interface{}
-
-	if resp.StatusCode < 400 {
-		if err := cli.UnmarshalResponse(resp, &decoded); err != nil {
-			return nil, nil, errors.Wrap(err, "Unmarshalling response failed")
-		}
-	} else {
-		return nil, nil, errors.Errorf("HTTP %d: %s", resp.StatusCode, resp.String())
-	}
-
-	after := cli.HandleAfter(handlerPath, params, resp, decoded)
-	if after != nil {
-		decoded = after.(map[string]interface{})
-	}
-
-	return resp, decoded, nil
-}
-
 // WaspOpenapiListMlmodel list-mlmodel
 func WaspOpenapiListMlmodel(params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
 	handlerPath := "list-mlmodel"
@@ -1169,9 +1119,9 @@ func WaspOpenapiInsertMlmodel(params *viper.Viper, body string) (*gentleman.Resp
 	return resp, decoded, nil
 }
 
-// WaspOpenapiDeleteMlmodel delete-mlmodel
-func WaspOpenapiDeleteMlmodel(paramMlmodelname string, paramMlmodelversion string, params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
-	handlerPath := "delete-mlmodel"
+// WaspOpenapiUpdateMlmodel update-mlmodel
+func WaspOpenapiUpdateMlmodel(params *viper.Viper, body string) (*gentleman.Response, map[string]interface{}, error) {
+	handlerPath := "update-mlmodel"
 	if waspOpenapiSubcommand {
 		handlerPath = "wasp-openapi " + handlerPath
 	}
@@ -1181,15 +1131,17 @@ func WaspOpenapiDeleteMlmodel(paramMlmodelname string, paramMlmodelversion strin
 		server = waspOpenapiServers()[viper.GetInt("server-index")]["url"]
 	}
 
-	url := server + "/mlmodels/{mlmodelname}/{mlmodelversion}"
-	url = strings.Replace(url, "{mlmodelname}", paramMlmodelname, 1)
-	url = strings.Replace(url, "{mlmodelversion}", paramMlmodelversion, 1)
+	url := server + "/mlmodels"
 
-	req := cli.Client.Delete().URL(url)
+	req := cli.Client.Put().URL(url)
 
 	paramPretty := params.GetBool("pretty")
 	if paramPretty != false {
 		req = req.AddQuery("pretty", fmt.Sprintf("%v", paramPretty))
+	}
+
+	if body != "" {
+		req = req.AddHeader("Content-Type", "text/json").BodyString(body)
 	}
 
 	cli.HandleBefore(handlerPath, params, req)
@@ -1265,9 +1217,9 @@ func WaspOpenapiGetMlmodel(paramMlmodelname string, paramMlmodelversion string, 
 	return resp, decoded, nil
 }
 
-// WaspOpenapiListPipegraph list-pipegraph
-func WaspOpenapiListPipegraph(params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
-	handlerPath := "list-pipegraph"
+// WaspOpenapiDeleteMlmodel delete-mlmodel
+func WaspOpenapiDeleteMlmodel(paramMlmodelname string, paramMlmodelversion string, params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
+	handlerPath := "delete-mlmodel"
 	if waspOpenapiSubcommand {
 		handlerPath = "wasp-openapi " + handlerPath
 	}
@@ -1277,9 +1229,11 @@ func WaspOpenapiListPipegraph(params *viper.Viper) (*gentleman.Response, map[str
 		server = waspOpenapiServers()[viper.GetInt("server-index")]["url"]
 	}
 
-	url := server + "/pipegraphs"
+	url := server + "/mlmodels/{mlmodelname}/{mlmodelversion}"
+	url = strings.Replace(url, "{mlmodelname}", paramMlmodelname, 1)
+	url = strings.Replace(url, "{mlmodelversion}", paramMlmodelversion, 1)
 
-	req := cli.Client.Get().URL(url)
+	req := cli.Client.Delete().URL(url)
 
 	paramPretty := params.GetBool("pretty")
 	if paramPretty != false {
@@ -1384,6 +1338,52 @@ func WaspOpenapiUpdatePipegraph(params *viper.Viper, body string) (*gentleman.Re
 
 	if body != "" {
 		req = req.AddHeader("Content-Type", "text/json").BodyString(body)
+	}
+
+	cli.HandleBefore(handlerPath, params, req)
+
+	resp, err := req.Do()
+	if err != nil {
+		return nil, nil, errors.Wrap(err, "Request failed")
+	}
+
+	var decoded map[string]interface{}
+
+	if resp.StatusCode < 400 {
+		if err := cli.UnmarshalResponse(resp, &decoded); err != nil {
+			return nil, nil, errors.Wrap(err, "Unmarshalling response failed")
+		}
+	} else {
+		return nil, nil, errors.Errorf("HTTP %d: %s", resp.StatusCode, resp.String())
+	}
+
+	after := cli.HandleAfter(handlerPath, params, resp, decoded)
+	if after != nil {
+		decoded = after.(map[string]interface{})
+	}
+
+	return resp, decoded, nil
+}
+
+// WaspOpenapiListPipegraph list-pipegraph
+func WaspOpenapiListPipegraph(params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
+	handlerPath := "list-pipegraph"
+	if waspOpenapiSubcommand {
+		handlerPath = "wasp-openapi " + handlerPath
+	}
+
+	server := viper.GetString("server")
+	if server == "" {
+		server = waspOpenapiServers()[viper.GetInt("server-index")]["url"]
+	}
+
+	url := server + "/pipegraphs"
+
+	req := cli.Client.Get().URL(url)
+
+	paramPretty := params.GetBool("pretty")
+	if paramPretty != false {
+		req = req.AddQuery("pretty", fmt.Sprintf("%v", paramPretty))
 	}
 
 	cli.HandleBefore(handlerPath, params, req)
@@ -2047,6 +2047,53 @@ func WaspOpenapiGetRaw(paramModelname string, params *viper.Viper) (*gentleman.R
 	return resp, decoded, nil
 }
 
+// WaspOpenapiStats stats
+func WaspOpenapiStats(paramStarttimestamp string, paramEndtimestamp string, paramSize string, params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
+	handlerPath := "stats"
+	if waspOpenapiSubcommand {
+		handlerPath = "wasp-openapi " + handlerPath
+	}
+
+	server := viper.GetString("server")
+	if server == "" {
+		server = waspOpenapiServers()[viper.GetInt("server-index")]["url"]
+	}
+
+	url := server + "/stats"
+
+	req := cli.Client.Get().URL(url)
+
+	req = req.AddQuery("startTimestamp", paramStarttimestamp)
+
+	req = req.AddQuery("endTimestamp", paramEndtimestamp)
+
+	req = req.AddQuery("size", paramSize)
+
+	cli.HandleBefore(handlerPath, params, req)
+
+	resp, err := req.Do()
+	if err != nil {
+		return nil, nil, errors.Wrap(err, "Request failed")
+	}
+
+	var decoded map[string]interface{}
+
+	if resp.StatusCode < 400 {
+		if err := cli.UnmarshalResponse(resp, &decoded); err != nil {
+			return nil, nil, errors.Wrap(err, "Unmarshalling response failed")
+		}
+	} else {
+		return nil, nil, errors.Errorf("HTTP %d: %s", resp.StatusCode, resp.String())
+	}
+
+	after := cli.HandleAfter(handlerPath, params, resp, decoded)
+	if after != nil {
+		decoded = after.(map[string]interface{})
+	}
+
+	return resp, decoded, nil
+}
+
 // WaspOpenapiListTelemetryMetric list-telemetry-metric
 func WaspOpenapiListTelemetryMetric(paramSearch string, paramSource string, paramSize string, params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
 	handlerPath := "list-telemetry-metric"
@@ -2095,7 +2142,7 @@ func WaspOpenapiListTelemetryMetric(paramSearch string, paramSource string, para
 }
 
 // WaspOpenapiGetTelemetrySeries get-telemetry-series
-func WaspOpenapiGetTelemetrySeries(paramMetric string, paramSource string, paramSize string, paramStarttimestamp string, paramEndtimestamp string, params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
+func WaspOpenapiGetTelemetrySeries(paramMetric string, paramSource string, paramSize string, paramStarttimestamp string, paramEndtimestamp string, paramAggregate string, params *viper.Viper) (*gentleman.Response, map[string]interface{}, error) {
 	handlerPath := "get-telemetry-series"
 	if waspOpenapiSubcommand {
 		handlerPath = "wasp-openapi " + handlerPath
@@ -2119,6 +2166,8 @@ func WaspOpenapiGetTelemetrySeries(paramMetric string, paramSource string, param
 	req = req.AddQuery("startTimestamp", paramStarttimestamp)
 
 	req = req.AddQuery("endTimestamp", paramEndtimestamp)
+
+	req = req.AddQuery("aggregate", paramAggregate)
 
 	cli.HandleBefore(handlerPath, params, req)
 
@@ -3068,46 +3117,6 @@ func waspOpenapiRegister(subcommand bool) {
 		var examples string
 
 		cmd := &cobra.Command{
-			Use:     "update-mlmodel",
-			Short:   "update-mlmodel",
-			Long:    cli.Markdown("Updates a machine learning model\n## Request Schema (text/json)\n\nproperties:\n  className:\n    nullable: true\n    type: string\n  description:\n    type: string\n  favorite:\n    type: boolean\n  modelFileId:\n    description: Should be a valid mongodb bsonobject formatted as hex string\n    example: 507f1f77bcf86cd799439011\n    nullable: true\n    type: string\n  name:\n    type: string\n  timestamp:\n    format: int64\n    nullable: true\n    type: integer\n  version:\n    type: string\nrequired:\n- name\n- version\n- favorite\n- description\ntype: object\nxml:\n  name: MlModelOnlyInfo\n  namespace: java://it.agilelab.bigdata.wasp.core.models\n"),
-			Example: examples,
-			Args:    cobra.MinimumNArgs(0),
-			Run: func(cmd *cobra.Command, args []string) {
-				body, err := cli.GetBody("text/json", args[0:])
-				if err != nil {
-					log.Fatal().Err(err).Msg("Unable to get body")
-				}
-
-				_, decoded, err := WaspOpenapiUpdateMlmodel(params, body)
-				if err != nil {
-					log.Fatal().Err(err).Msg("Error calling operation")
-				}
-
-				if err := cli.Formatter.Format(decoded); err != nil {
-					log.Fatal().Err(err).Msg("Formatting failed")
-				}
-
-			},
-		}
-		root.AddCommand(cmd)
-
-		cmd.Flags().String("pretty", "", "")
-
-		cli.SetCustomFlags(cmd)
-
-		if cmd.Flags().HasFlags() {
-			params.BindPFlags(cmd.Flags())
-		}
-
-	}()
-
-	func() {
-		params := viper.New()
-
-		var examples string
-
-		cmd := &cobra.Command{
 			Use:     "list-mlmodel",
 			Short:   "list-mlmodel",
 			Long:    cli.Markdown("Retrieve all machine learning models info"),
@@ -3184,14 +3193,18 @@ func waspOpenapiRegister(subcommand bool) {
 		var examples string
 
 		cmd := &cobra.Command{
-			Use:     "delete-mlmodel mlmodelname mlmodelversion",
-			Short:   "delete-mlmodel",
-			Long:    cli.Markdown("Delete a Machine learning model"),
+			Use:     "update-mlmodel",
+			Short:   "update-mlmodel",
+			Long:    cli.Markdown("Updates a machine learning model\n## Request Schema (text/json)\n\nproperties:\n  className:\n    nullable: true\n    type: string\n  description:\n    type: string\n  favorite:\n    type: boolean\n  modelFileId:\n    description: Should be a valid mongodb bsonobject formatted as hex string\n    example: 507f1f77bcf86cd799439011\n    nullable: true\n    type: string\n  name:\n    type: string\n  timestamp:\n    format: int64\n    nullable: true\n    type: integer\n  version:\n    type: string\nrequired:\n- name\n- version\n- favorite\n- description\ntype: object\nxml:\n  name: MlModelOnlyInfo\n  namespace: java://it.agilelab.bigdata.wasp.core.models\n"),
 			Example: examples,
-			Args:    cobra.MinimumNArgs(2),
+			Args:    cobra.MinimumNArgs(0),
 			Run: func(cmd *cobra.Command, args []string) {
+				body, err := cli.GetBody("text/json", args[0:])
+				if err != nil {
+					log.Fatal().Err(err).Msg("Unable to get body")
+				}
 
-				_, decoded, err := WaspOpenapiDeleteMlmodel(args[0], args[1], params)
+				_, decoded, err := WaspOpenapiUpdateMlmodel(params, body)
 				if err != nil {
 					log.Fatal().Err(err).Msg("Error calling operation")
 				}
@@ -3256,14 +3269,14 @@ func waspOpenapiRegister(subcommand bool) {
 		var examples string
 
 		cmd := &cobra.Command{
-			Use:     "list-pipegraph",
-			Short:   "list-pipegraph",
-			Long:    cli.Markdown("Lists all pipegraphs"),
+			Use:     "delete-mlmodel mlmodelname mlmodelversion",
+			Short:   "delete-mlmodel",
+			Long:    cli.Markdown("Delete a Machine learning model"),
 			Example: examples,
-			Args:    cobra.MinimumNArgs(0),
+			Args:    cobra.MinimumNArgs(2),
 			Run: func(cmd *cobra.Command, args []string) {
 
-				_, decoded, err := WaspOpenapiListPipegraph(params)
+				_, decoded, err := WaspOpenapiDeleteMlmodel(args[0], args[1], params)
 				if err != nil {
 					log.Fatal().Err(err).Msg("Error calling operation")
 				}
@@ -3344,6 +3357,42 @@ func waspOpenapiRegister(subcommand bool) {
 				}
 
 				_, decoded, err := WaspOpenapiUpdatePipegraph(params, body)
+				if err != nil {
+					log.Fatal().Err(err).Msg("Error calling operation")
+				}
+
+				if err := cli.Formatter.Format(decoded); err != nil {
+					log.Fatal().Err(err).Msg("Formatting failed")
+				}
+
+			},
+		}
+		root.AddCommand(cmd)
+
+		cmd.Flags().String("pretty", "", "")
+
+		cli.SetCustomFlags(cmd)
+
+		if cmd.Flags().HasFlags() {
+			params.BindPFlags(cmd.Flags())
+		}
+
+	}()
+
+	func() {
+		params := viper.New()
+
+		var examples string
+
+		cmd := &cobra.Command{
+			Use:     "list-pipegraph",
+			Short:   "list-pipegraph",
+			Long:    cli.Markdown("Lists all pipegraphs"),
+			Example: examples,
+			Args:    cobra.MinimumNArgs(0),
+			Run: func(cmd *cobra.Command, args []string) {
+
+				_, decoded, err := WaspOpenapiListPipegraph(params)
 				if err != nil {
 					log.Fatal().Err(err).Msg("Error calling operation")
 				}
@@ -3868,6 +3917,40 @@ func waspOpenapiRegister(subcommand bool) {
 		var examples string
 
 		cmd := &cobra.Command{
+			Use:     "stats starttimestamp endtimestamp size",
+			Short:   "stats",
+			Long:    cli.Markdown("Retrieve stats about logs, events and metrics"),
+			Example: examples,
+			Args:    cobra.MinimumNArgs(3),
+			Run: func(cmd *cobra.Command, args []string) {
+
+				_, decoded, err := WaspOpenapiStats(args[0], args[1], args[2], params)
+				if err != nil {
+					log.Fatal().Err(err).Msg("Error calling operation")
+				}
+
+				if err := cli.Formatter.Format(decoded); err != nil {
+					log.Fatal().Err(err).Msg("Formatting failed")
+				}
+
+			},
+		}
+		root.AddCommand(cmd)
+
+		cli.SetCustomFlags(cmd)
+
+		if cmd.Flags().HasFlags() {
+			params.BindPFlags(cmd.Flags())
+		}
+
+	}()
+
+	func() {
+		params := viper.New()
+
+		var examples string
+
+		cmd := &cobra.Command{
 			Use:     "list-telemetry-metric search source size",
 			Short:   "list-telemetry-metric",
 			Long:    cli.Markdown("List top telemetry metrics for source matching search"),
@@ -3902,14 +3985,14 @@ func waspOpenapiRegister(subcommand bool) {
 		var examples string
 
 		cmd := &cobra.Command{
-			Use:     "get-telemetry-series metric source size starttimestamp endtimestamp",
+			Use:     "get-telemetry-series metric source size starttimestamp endtimestamp aggregate",
 			Short:   "get-telemetry-series",
 			Long:    cli.Markdown("Retrieves series data pre aggregated by the server for display"),
 			Example: examples,
-			Args:    cobra.MinimumNArgs(5),
+			Args:    cobra.MinimumNArgs(6),
 			Run: func(cmd *cobra.Command, args []string) {
 
-				_, decoded, err := WaspOpenapiGetTelemetrySeries(args[0], args[1], args[2], args[3], args[4], params)
+				_, decoded, err := WaspOpenapiGetTelemetrySeries(args[0], args[1], args[2], args[3], args[4], args[5], params)
 				if err != nil {
 					log.Fatal().Err(err).Msg("Error calling operation")
 				}
